@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix issues with ActiveResource collection handling.  Closes #6291. [bmilekic]
+
 * Use attr_accessor_with_default to dry up attribute initialization. References #6538. [Stuart Halloway]
 
 * Add basic logging support for logging outgoing requests. [Jamis Buck]
